--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^9.11.0",
     "google-spreadsheet": "^4.1.2",
     "googleapis": "^140.0.1",
+    "helmet": "^7.1.0",
     "mongoose": "^8.4.5",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
