--- a/config/config.env
+++ b/config/config.env
@@ -11,3 +11,7 @@ GOOGLE_CLIENT_SECRET = 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
 GEN_AI_API_KEY = AIzaSyDelUOfGxy_ex08Q4LOWn_ZhDqOmy8id78
 
 SESSION_SECRETE = secret
+
+LINKEDIN_CLIENT_ID = 77n64lq8s2tcp0
+LINKEDIN_CLIENT_SECRETE = Y80q1e88iLN0T5tq
+LINKEDIN_REDIRECT_URI = https://linkedin-gemini-gs-server.onrender.com/auth/linkedin/callback
